--- a/OrderBackend/OrderBackend/OrderBackend.csproj
+++ b/OrderBackend/OrderBackend/OrderBackend.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GrueneisR.RestClientGenerator" Version="*" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="*" />
+    <PackageReference Include="GrueneisR.RestClientGenerator" Version="1.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
