welcome page started + overview

--- a/OrderBackend/OrdersDb/OrdersDb.csproj
+++ b/OrderBackend/OrdersDb/OrdersDb.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="OrdersContext.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
