--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "swag": "openapi-generator-cli generate --generator-key angular",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
