--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "bootstrap": "^5.3.2",
     "flowbite": "^2.2.1",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "tw-elements": "^1.1.0",
