--- a/OrderBackend/OrderBackend/OrderBackend.csproj
+++ b/OrderBackend/OrderBackend/OrderBackend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="2.5.0" />
     <PackageReference Include="GrueneisR.RestClientGenerator" Version="1.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0" />
@@ -15,6 +16,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OrdersDb\OrdersDb.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update=".env">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
