--- a/OrderBackend/OrderBackend/OrderBackend.csproj
+++ b/OrderBackend/OrderBackend/OrderBackend.csproj
@@ -22,6 +22,9 @@
     <None Update=".env">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update=".env">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
